--- a/_includes/page-footer.html
+++ b/_includes/page-footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
 <address>
-For more questions about Net-Trim, please feel free to <a href="mailto:aaghasi@gsu.edu,abdi@gatech.edu">contact us</a>.<br> 
+For more questions about Net-Trim, please feel free to <a href="mailto:aaghasi@gsu.edu;abdi@gatech.edu">contact us</a>.<br> 
 </address>
 </footer>
