--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -2,7 +2,7 @@
   <h1 class="project-name">{{ site.title }}</h1>
   <h2 class="project-tagline">{{ site.tagline }}</h2>
   <a href="https://github.com/DNNToolBox/Net-Trim" class="btn"> Latest Github Code</a>
-  <a href="https://arxiv.org/pdf/1806.06457.pdf" class="btn"> Read 2019 Paper</a>
+  <a href="https://epubs.siam.org/doi/abs/10.1137/19M1246468" class="btn"> Read 2020 Paper</a>
   <a href="https://papers.nips.cc/paper/6910-net-trim-convex-pruning-of-deep-neural-networks-with-performance-guarantee" class="btn"> Read 2017 Paper</a>
   <a href="https://github.com/DNNToolBox/Net-Trim-v1" class="btn">Old Github Code</a>
 </section>
